remove unused archives, create list all backend
